--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -37,14 +37,14 @@ ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=false
 
 # Websocket URL of Ethereum L1 node.
-# Only used if `enable_optimism` is true.
+# Only used if `ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=true`.
 ASTRIA_CONDUCTOR_ETHEREUM_L1_URL="ws://127.0.0.1:8545",
 
 # Contract address of the OptimismPortal contract on L1.
-# Only used if `enable_optimism` is true.
+# Only used if `ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=true`.
 ASTRIA_CONDUCTOR_OPTIMISM_PORTAL_CONTRACT_ADDRESS=""
 
 # The block height of the Ethereum L1 chain that the
 # OptimismPortal contract was deployed at.
-# Only used if `enable_optimism` is true.
+# Only used if `ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=true`.
 ASTRIA_CONDUCTOR_INITIAL_ETHEREUM_L1_BLOCK_HEIGHT=1
