--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ bytes = "1.4"
 clap = "4"
 color-eyre = "0.6"
 ed25519-consensus = "2.1.0"
+ethers = "2.0.11"
 eyre = "0.6"
 futures = "0.3"
 hex = "0.4"
@@ -64,8 +65,6 @@ which = "4.4.0"
 wiremock = "0.5"
 
 [patch.crates-io]
-# TODO: remove once a release with https://github.com/gakonst/ethers-rs/pull/2644 is tagged
-ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4acfa9d4e093022aa1bdbe9490e0ffa927494ec1" }
 tendermint = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
 tendermint-config = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
 tendermint-proto = { git = "https://github.com/astriaorg/tendermint-rs", branch = "v0.33.2-reqwest-backport" }
