--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -13,7 +13,7 @@ deadpool = { version = "0.10.0", default-features = false, features = [
   "managed",
 ] }
 ed25519-consensus = { workspace = true }
-ethers = { version = "2.0", features = ["optimism", "ws"] }
+ethers = { workspace = true, features = ["optimism", "ws"] }
 futures = { workspace = true }
 hex = { workspace = true }
 humantime = { workspace = true }
@@ -34,8 +34,8 @@ tracing = { workspace = true }
 tryhard = { workspace = true }
 
 celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
-astria-sequencer-types = { path = "../astria-sequencer-types" }
-astria-optimism = { path = "../astria-optimism" }
+sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
+optimism = { package = "astria-optimism", path = "../astria-optimism" }
 config = { package = "astria-config", path = "../astria-config" }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
 proto = { package = "astria-proto", path = "../astria-proto", features = [
@@ -49,10 +49,10 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 [dev-dependencies]
 jsonrpsee = { workspace = true, features = ["server"] }
 
-astria-sequencer-types = { path = "../astria-sequencer-types", features = [
+sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types", features = [
   "test-utils",
 ] }
-astria-optimism = { path = "../astria-optimism", features = ["test-utils"] }
+optimism = { package = "astria-optimism", path = "../astria-optimism", features = ["test-utils"] }
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
