--- a/crates/astria-test-utils/Cargo.toml
+++ b/crates/astria-test-utils/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethers = { version = "2.0.7", features = ["ws"], optional = true }
 impl-serde = { version = "0.4.0", optional = true }
+ethers = { workspace = true, features = ["ws"], optional = true }
 jsonrpsee = { workspace = true, optional = true, features = [
   "macros",
   "server",
