--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -52,7 +52,9 @@ jsonrpsee = { workspace = true, features = ["server"] }
 sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types", features = [
   "test-utils",
 ] }
-optimism = { package = "astria-optimism", path = "../astria-optimism", features = ["test-utils"] }
+optimism = { package = "astria-optimism", path = "../astria-optimism", features = [
+  "test-utils",
+] }
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
