--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,13 @@ jobs:
     if: needs.run_checker.outputs.run_tests == 'true'
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
+      - run: |
+          pip3 install solc-select
+          solc-select install 0.8.15
+          solc-select use 0.8.15
       - uses: dtolnay/rust-toolchain@1.72.0
       - uses: Swatinem/rust-cache@v2.6.1
         with:
@@ -65,6 +72,8 @@ jobs:
         with:
           version: "24.4"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
       - name: Build tests
         run: |
           cargo test --no-run --release --workspace \
