--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,12 @@
 members = [
   "crates/astria-celestia-client",
   "crates/astria-celestia-mock",
+  "crates/astria-cli",
   "crates/astria-composer",
   "crates/astria-conductor",
   "crates/astria-config",
-  "crates/astria-cli",
   "crates/astria-merkle",
+  "crates/astria-optimism",
   "crates/astria-proto",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
@@ -27,6 +28,7 @@ bytes = "1.4"
 clap = "4"
 color-eyre = "0.6"
 ed25519-consensus = "2.1.0"
+ethers = "2.0.11"
 eyre = "0.6"
 futures = "0.3"
 hex = "0.4"
