--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -19,6 +19,7 @@ ed25519-consensus = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
+serde = { workspace = true, optional = true }
 sha2 = { workspace = true, optional = true }
 tendermint = { workspace = true }
 tendermint-proto = { workspace = true }
@@ -29,6 +30,7 @@ tracing = { workspace = true, optional = true }
 default = ["native"]
 client = ["dep:tonic"]
 native = ["dep:ed25519-consensus", "dep:hex", "dep:sha2", "dep:tracing"]
+serde = ["dep:serde", "hex?/serde"]
 server = ["dep:tonic"]
 
 [dev-dependencies]
