--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -17,6 +17,8 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 [dependencies]
 ed25519-consensus = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
+penumbra-ibc = { workspace = true }
+penumbra-proto = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 sha2 = { workspace = true, optional = true }
@@ -26,8 +28,6 @@ tonic = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
 
 anyhow = "1"
-penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "11d3b524da750c16c376759b03e4bbb3474562d9" }
-penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "11d3b524da750c16c376759b03e4bbb3474562d9" }
 
 [features]
 default = ["native"]
