--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -22,6 +22,7 @@ penumbra-proto = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 serde = { workspace = true, optional = true }
+serde_json = { workspace = true }
 sha2 = { workspace = true, optional = true }
 tendermint = { workspace = true }
 tendermint-proto = { workspace = true }
