--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ hex = "0.4"
 hex-literal = "0.4.1"
 humantime = "2.1.0"
 hyper = "0.14"
+ibc-types = "0.7.0"
 jsonrpsee = { version = "0.20" }
 once_cell = "1.17.1"
 sha2 = "0.10"
