--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -17,6 +17,7 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 [dependencies]
 ed25519-consensus = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
+ibc-types = { workspace = true }
 penumbra-ibc = { workspace = true }
 penumbra-proto = { workspace = true }
 prost = { workspace = true }
@@ -28,8 +29,6 @@ tendermint = { workspace = true }
 tendermint-proto = { workspace = true }
 tonic = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
-
-ibc-types = { version = "0.7.0", features = ["with_serde"] }
 
 [features]
 default = ["native"]
