feat(sequencer): support `IbcAction`s and implement ICS20 incoming transfer application logic (#579)
## Summary
Adds IBC support for ICS20 token transfers

## Background
We want IBC support, specifically for token transfers (eg. using TIA as
a gas token).

See the cosmos ICS20 spec:
https://github.com/cosmos/ibc/blob/fe150abb629de5c1a598e8c7896a7568f2083681/spec/app/ics-020-fungible-token-transfer/README.md

## Changes
- bump penumbra version and related deps to include IBC refactor for
generic `AppHandler`s + substore support
- implement an `IbcAsset` type which represents an IBC-transferred-token
- update `Action` proto and native enums to include `IbcAction`
variants, `IbcAction` is a type defined in `penumbra_ibc`
- implement `sequencer::accounts::Ics20Transfer` which is the app
handler for `IbcAction`s, which is called into during
`IbcAction::check_stateless` and `IbcAction::execute`
- `Ics20Transfer` contains the actual ICS20 transfer logic; namely,
handling inbound IBC packets that are transfers. there are two main
cases we handle for transfer logic: a token being received on Astria
from another chain, or a notification of an outbound transfer failing,
in which case we need to refund the escrowed tokens.
- in both cases, we determine if Astria is the source of token we need
to issue, and handle the packet accordingly (either minting the
synthetic, bridged asset if we are not the source, or sending native
Astria tokens from the escrow account to the recipient if we are the
source)

## Testing
can't really test the transfer functionality without heavier integration
testing at the moment, due to the fact that it requires merkle proofs of
state of the counterparty chain. in discussions with the penumbra team
about a "mock tendermint" test harness we could use to test this in a
unit-test-like environment.

## Breaking Changelist
- none

## Related Issues

closes #79

--- a/crates/astria-proto/proto/buf.yaml
+++ b/crates/astria-proto/proto/buf.yaml
@@ -1,7 +1,7 @@
 version: v1
 name: buf.build/astria/astria
 deps:
-  - buf.build/tendermint/tendermint
+  - buf.build/penumbra-zone/penumbra:bc443669626d4a7b823f588d95c9a528
 breaking:
   use:
     - FILE
