--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -17,6 +17,8 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 [dependencies]
 ed25519-consensus = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
+penumbra-ibc = { workspace = true }
+penumbra-proto = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 serde = { workspace = true, optional = true }
