ignore optimism tests by default

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,6 +88,7 @@ jobs:
           cargo test --release --workspace \
           --all-features \
           --all-targets \
+          -- --include-ignored
 
   doctest:
     runs-on: buildjet-8vcpu-ubuntu-2204
