--- a/crates/astria-celestia-client/Cargo.toml
+++ b/crates/astria-celestia-client/Cargo.toml
@@ -10,14 +10,16 @@ rust-version = "1.73"
 async-trait = { workspace = true }
 base64 = { workspace = true }
 base64-serde = { workspace = true }
+hex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
 tendermint = { workspace = true }
 thiserror = { workspace = true }
+tracing = { workspace = true }
 
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
-sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
+proto = { package = "astria-proto", path = "../astria-proto" }
 
 ### Celestia specific imports
 #
