--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,8 @@
 [workspace]
+exclude = [
+  "tools/protobuf-compiler",
+]
+
 members = [
   "crates/astria-celestia-client",
   "crates/astria-celestia-mock",
