WIP: make linters happy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
 [workspace]
-exclude = [
-  "tools/protobuf-compiler",
-]
+exclude = ["tools/protobuf-compiler"]
 
 members = [
   "crates/astria-celestia-client",
