--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -23,6 +23,7 @@ penumbra-ibc = { workspace = true }
 penumbra-proto = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
+rand = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 sha2 = { workspace = true, optional = true }
 tendermint = { workspace = true }
@@ -39,6 +40,7 @@ client = ["dep:tonic"]
 native = ["dep:ed25519-consensus", "dep:hex", "dep:sha2", "dep:tracing"]
 serde = ["dep:serde", "hex?/serde"]
 server = ["dep:tonic"]
+test-utils = ["dep:rand"]
 
 [dev-dependencies]
 tonic-build = "0.10"
