changes for conductor

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -10,9 +10,9 @@ ASTRIA_CONDUCTOR_CELESTIA_BEARER_TOKEN="<JWT Bearer token>"
 # This url is used to read astria blocks from the Data Availability layer
 ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://127.0.0.1:26659"
 
-# The chain id of the chain that is being read from the astria-sequencer or the
+# The rollup name of the chain that is being read from the astria-sequencer or the
 # Data Availability layer
-ASTRIA_CONDUCTOR_CHAIN_ID="astriachain"
+ASTRIA_CONDUCTOR_ROLLUP_NAME="astriachain"
 
 # Execution RPC URL
 ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
