--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -154,7 +154,7 @@ jobs:
           --all-targets --all-features \
           -- --warn clippy::pedantic --deny warnings
       - name: run pedantic clippy on tools/protobuf-compiler
-      - run: |
+        run: |
           cargo clippy --manifest-path tools/protobuf-compiler/Cargo.toml \
           --all-targets --all-features \
           -- --warn clippy::pedantic --deny warnings
