--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           # The 'main' branch of the GitHub repository that defines the module.
           input: "proto"
-          against: "https://github.com/astriaorg/astria.git#branch=main,ref=HEAD,subdir=crates/proto"
+          against: "https://github.com/astriaorg/astria.git#branch=main,ref=HEAD,subdir=proto"
 
   rust:
     runs-on: ubuntu-22.04
