refactor: rename proto crate to core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ members = [
   "crates/astria-composer",
   "crates/astria-conductor",
   "crates/astria-config",
+  "crates/astria-core",
   "crates/astria-merkle",
   "crates/astria-optimism",
-  "crates/astria-proto",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
