--- a/crates/astria-celestia-client/Cargo.toml
+++ b/crates/astria-celestia-client/Cargo.toml
@@ -18,8 +18,8 @@ tendermint = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
+astria-core = { path = "../astria-core" }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
-proto = { package = "astria-proto", path = "../astria-proto" }
 
 ### Celestia specific imports
 #
@@ -28,6 +28,7 @@ proto = { package = "astria-proto", path = "../astria-proto" }
 # As none of them are reexported it is important to keep these in sync
 # when updating.
 jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }
+prost = { workspace = true }
 
 [dependencies.celestia-rpc]
 git = "https://github.com/eigerco/celestia-node-rs"
