--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -10,7 +10,7 @@ bench = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-proto = { package = "astria-proto", path = "../astria-proto" }
+astria-core = { path = "../astria-core" }
 
 clap = { workspace = true, features = ["derive", "env"] }
 color-eyre = { workspace = true }
