--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -7,8 +7,8 @@ rust-version = "1.70.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+astria-core = { path = "../astria-core" }
 config = { package = "astria-config", path = "../astria-config" }
-proto = { package = "astria-proto", path = "../astria-proto" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 pin-project-lite = "0.2.13"
@@ -42,6 +42,7 @@ tokio = { workspace = true, features = [
 tokio-util = { workspace = true, features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
 tryhard = { workspace = true }
+prost.workspace = true
 
 [dependencies.sequencer-client]
 package = "astria-sequencer-client"
@@ -56,7 +57,6 @@ path = "../astria-sequencer-types"
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
-proto = { package = "astria-proto", path = "../astria-proto" }
 test_utils = { package = "astria-test-utils", path = "../astria-test-utils", features = [
   "geth",
 ] }
