--- a/crates/astria-core/Cargo.toml
+++ b/crates/astria-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "astria-proto"
+name = "astria-core"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
@@ -17,29 +17,25 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 [dependencies]
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
 
-ed25519-consensus = { workspace = true, optional = true }
-hex = { workspace = true, optional = true }
+ed25519-consensus = { workspace = true }
+hex = { workspace = true }
 ibc-types = { workspace = true }
 penumbra-ibc = { workspace = true }
 penumbra-proto = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
-serde = { workspace = true, optional = true }
-sha2 = { workspace = true, optional = true }
+rand = { workspace = true, optional = true }
+sha2 = { workspace = true }
 tendermint = { workspace = true }
 tendermint-proto = { workspace = true }
 thiserror = { workspace = true }
 tonic = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
+tracing = { workspace = true }
 
 indexmap = "2.1.0"
-rand = { workspace = true, optional = true }
 
 [features]
-default = ["native"]
 client = ["dep:tonic"]
-native = ["dep:ed25519-consensus", "dep:hex", "dep:sha2", "dep:tracing"]
-serde = ["dep:serde", "hex?/serde"]
 server = ["dep:tonic"]
 test-utils = ["dep:rand"]
 
