--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -8,7 +8,8 @@ ASTRIA_COMPOSER_API_LISTEN_ADDR="0.0.0.0:0"
 ASTRIA_COMPOSER_SEQUENCER_URL="http://127.0.0.1:26657"
 
 # A list of execution <rollup_name_1>::<rpc_server_1>,<rollup_name_id_2>::<rpc_server_2>.
-# Rollup Names are not case sensitive. If a name is repeated, the last list item is used.
+# Rollup names are not case sensitive, they will be converted to lowercase. If a name is
+# repeated, the last list item is used.
 ASTRIA_COMPOSER_ROLLUPS="astriachain::ws://127.0.0.1:8545"
 
 # Private key for the sequencer account used for signing transactions
