--- a/crates/composer/Cargo.toml
+++ b/crates/composer/Cargo.toml
@@ -45,7 +45,7 @@ tryhard = { workspace = true }
 
 [dependencies.sequencer-client]
 package = "astria-sequencer-client"
-path = "../astria-sequencer-client"
+path = "../sequencer-client"
 features = ["http"]
 
 [dependencies.sequencer-types]
