test docker tag processing

--- a/.github/workflows/reusable-cargo-version.yml
+++ b/.github/workflows/reusable-cargo-version.yml
@@ -21,7 +21,7 @@ jobs:
         uses: joroshiba/version-check@v2
         with:
           file: ${{ format('crates/astria-{0}/Cargo.toml', inputs.package-name) }}
-          tagFormat: ${{ format('v${{version}}--{0}', inputs.package-name) }}
+          tagFormat: ${{ format('{0}-v${{version}}', inputs.package-name) }}
           failBuild: false
       # Notice appears when the version has changed on a PR to main
       - name: Release Notice
