test of cli release building

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,9 +58,17 @@ jobs:
       package-name: 'sequencer-relayer'
       display-name: 'Sequencer Relayer'
 
+  cli:
+    needs: run_checker
+    if: needs.run_checker.outputs.run_release_services == 'true'
+    uses: ./.github/workflows/reusable-cargo-version.yml
+    with:
+      package-name: 'cli'
+      display-name: 'CLI'
+      compile-binary: true
 
   release:
-    needs: [proto, conductor, composer, sequencer, sequencer-relayer]
+    needs: [proto, conductor, composer, sequencer, sequencer-relayer, cli]
     if: ${{ always() && !cancelled() }}
     uses: ./.github/workflows/reusable-success.yml
     with:
