make upload run

--- a/.github/workflows/reusable-cargo-version.yml
+++ b/.github/workflows/reusable-cargo-version.yml
@@ -62,7 +62,7 @@ jobs:
     
   upload-binaries:
     needs: rust-version-release
-    if: inputs.compile-binary == 'true' # && needs.rust-version-release.outputs.release-cut == 'true'
+    if: inputs.compile-binary == 'true'
     strategy:
       matrix:
         include:
