--- a/.github/workflows/reusable-cargo-version.yml
+++ b/.github/workflows/reusable-cargo-version.yml
@@ -80,6 +80,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
+          dry-run: true
           bin: astria-cli
           # (optional) Target triple, default is host triple.
           target: ${{ matrix.target }}
