--- a/.github/workflows/reusable-cargo-version.yml
+++ b/.github/workflows/reusable-cargo-version.yml
@@ -68,10 +68,7 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            build-tool: cargo-zigbuild
-          - target: aarch64-unknown-linux-gnu.2.17
-            os: ubuntu-latest
-            build-tool: cargo-zigbuild
+            build-tool: cargo
           - target: aarch64-apple-darwin
             os: macos-latest
             build-tool: cargo
