ci: switch tagging format (#639)
## Summary
Updates to have docker images be tagged as `<component>:<version>`
instead of `<component>:<version>--<component>`, as well as migrates the
way the git tags are used to match how tags managed with
[release-please](https://github.com/googleapis/release-please/blob/main/docs/manifest-releaser.md#subsequent-versions)
for future use.

## Background
Our github tags are silly to attempt to use the semver tag processing.
This migrates to a different pattern better supported by other tools

## Changes
- docker tag generation
- tag pattern matching for running docker jobs
- update release pattern matching

## Testing
Some manual CI changes

NOTE: shipped copies of all previous tags already

--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   build-and-push:
     runs-on: buildjet-8vcpu-ubuntu-2204
-    if: ${{ contains(github.ref, 'refs/tags/v') && endsWith(github.ref, format('--{0}', inputs.package-name)) || github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
+    if: ${{ startsWith(github.ref, format('refs/tags/{0}-v', inputs.package-name)) || github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
     steps:
       # Checking out the repo
       - uses: actions/checkout@v3
@@ -50,7 +50,7 @@ jobs:
           images: ${{ format('ghcr.io/astriaorg/{0}', inputs.package-name) }}
           tags: |
             type=ref,event=pr
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=match,pattern=([a-z-]+)-v(.*),group=2
             type=sha
             # set latest tag for `main` branch
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
