ci(cli): autocut release binaries (#643)
## Summary
Adds release job for CLI similar to our services, and cuts release
binaries on it's release tag.

## Background
CLI install is currently done through the repo and requires having cargo
installed, this will allow folks to use CLI without rust installed, and
we can build a script to automate install.

## Changes
- add upload binaries reusable script
- add CLI as something released.

## Testing
Run with dry-run settings on this PR

## Related Issues
closes https://github.com/astriaorg/astria/issues/642

--- a/.github/workflows/reusable-cargo-version.yml
+++ b/.github/workflows/reusable-cargo-version.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   rust-version-release:
     runs-on: ubuntu-latest
+    outputs: 
+      release-cut: ${{ steps.output.outputs.release_cut }}
     steps:
       - uses: actions/checkout@v3
       - run: git fetch --all --tags
@@ -51,4 +53,5 @@ jobs:
           release_name: ${{ inputs.display-name }} ${{ steps.release_version.outputs.rawVersion }}
           draft: true
           prerelease: true
-        
+    
+
