--- a/crates/astria-telemetry/Cargo.toml
+++ b/crates/astria-telemetry/Cargo.toml
@@ -9,6 +9,15 @@ rust-version = "1.70.0"
 [dependencies]
 base64 = { workspace = true, optional = true }
 
+# When updating ensure that `opentelemetry-semantic-conventions` matches
+# that used by `opentelemetry-otlp`.
+opentelemetry = "0.21.0"
+opentelemetry-otlp = { version = "0.14.0", features = ["gzip-tonic"] }
+opentelemetry-semantic-conventions = "0.13.0"
+opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
+opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
+thiserror = { workspace = true }
+tracing-opentelemetry = "0.22.0"
 tracing-subscriber = { version = "0.3.17", features = [
   "fmt",
   "env-filter",
