feat(sequencer): implement ICS20 withdrawals (#609)
## Summary
Counterpart to #579 which supports incoming ICS20 transfers, this PR
implements outgoing ICS20 transfers.

## Background
required for IBC token transfer support.

See
https://github.com/cosmos/ibc/blob/fe150abb629de5c1a598e8c7896a7568f2083681/spec/app/ics-020-fungible-token-transfer/README.md
`sendFungibleTokens` for spec.

## Changes
- add `Ics20Withdrawal` proto and native type which is an action (maybe
rename to `Ics20WithdrawalAction`?)
- implement check logic (apart from IBC packet check, check the sender
has enough balance)
- implement execution logic (escrow tokens if native, or burn if not
native)

## Testing
not really - same issue as #579 

## Related Issues

closes #597

--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -19,6 +19,7 @@ merkle = { package = "astria-merkle", path = "../astria-merkle" }
 
 ed25519-consensus = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
+ibc-types = { workspace = true }
 penumbra-ibc = { workspace = true }
 penumbra-proto = { workspace = true }
 prost = { workspace = true }
