--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,11 +44,9 @@ once_cell = "1.17.1"
 sha2 = "0.10"
 serde = "1"
 serde_json = "1"
-penumbra-component = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "ab1f82970af76091b962509831ec0f53cfeb85f4" }
-penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "ab1f82970af76091b962509831ec0f53cfeb85f4", default-features = false }
-penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "ab1f82970af76091b962509831ec0f53cfeb85f4" }
-penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "ab1f82970af76091b962509831ec0f53cfeb85f4" }
-penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "ab1f82970af76091b962509831ec0f53cfeb85f4" }
+penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.64.1", default-features = false }
+penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.64.1" }
+penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.64.1" }
 prost = "0.12"
 prost-types = "0.12"
 rand = "0.8.5"
