--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@1.73.0
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           dry-run: ${{ !startsWith(github.ref, 'refs/tags/cli-v') }}
