--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         include:
           - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
+            os: buildjet-4vcpu-ubuntu-2004
             build-tool: cargo
           - target: aarch64-apple-darwin
             os: macos-latest
@@ -28,6 +28,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@1.73.0
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           dry-run: ${{ !startsWith(github.ref, 'refs/tags/cli-v') }}
