--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "astria-cli"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
+rust-version = "1.73"
 
 [[bin]]
 name = "astria-cli"
