--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -19,5 +19,6 @@ ASTRIA_COMPOSER_PRIVATE_KEY="2bd806c97f0e00af1a1fc3328fa763a9269723c8db8fac4f93a
 # Should match the sequencer node configuration for 'timeout_commit', as specified in https://docs.tendermint.com/v0.34/tendermint-core/configuration.html
 ASTRIA_COMPOSER_BLOCK_TIME=2000
 
-# Max bytes to send in a single sequencer `SignedTransaction` (sum of all `SequenceAction`s)
-ASTRIA_COMPOSER_MAX_BUNDLE_SZ=250000
+# Max bytes to encode into a single sequencer `SignedTransaction`, not including signature,
+# public key, nonce. This is the sum of the sizes of all the `SequenceAction`s
+ASTRIA_COMPOSER_MAX_BUNDLE_SIZE=250000
