added da block range to env file, fix block verifier visibility

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -36,6 +36,9 @@ ASTRIA_CONDUCTOR_INITIAL_SEQUENCER_BLOCK_HEIGHT=1
 # the data availability block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_INITIAL_DA_BLOCK_HEIGHT=1
 
+# The number of block on DA in which the first sequencer block for the rollup should be found
+ASTRIA_CONDUCTOR_DA_BLOCK_RANGE=100
+
 # set to true to enable op-stack deposit derivations
 ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=false
 
