--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "main"
+      - "sequencer-v0.7.x"
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+--[a-z]+**"
       - "v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+--[a-z]+**"
@@ -19,7 +19,7 @@ on:
       - reopened
       - labeled
     branches:
-      - "main"
+      - "sequencer-v0.7.x"
 
 jobs:
   run_checker:
